@@ -146,27 +146,6 @@
                     <path>/gallery</path>
                 </configuration>
             </plugin>
-
-
-            <!--<plugin>-->
-                <!--<groupId>org.apache.maven.plugins</groupId>-->
-                <!--<artifactId>maven-surefire-plugin</artifactId>-->
-                <!--<version>2.19.1</version>-->
-                <!--<configuration>-->
-                    <!--<argLine>-Dfile.encoding=UTF-8 -Xmx1024m -XX:MaxPermSize=256m</argLine>-->
-                    <!--<forkMode>once</forkMode>-->
-                <!--</configuration>-->
-            <!--</plugin>-->
-
-                        <plugin>
-                            <groupId>org.apache.maven.plugins</groupId>
-                            <artifactId>maven-surefire-plugin</artifactId>
-                            <version>2.18.1</version>
-                            <configuration>
-                                <forkMode>once</forkMode>
-                                <argLine>-Dfile.encoding=UTF-8 -Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m</argLine>
-                            </configuration>
-                        </plugin>
         </plugins>
     </build>
 
